# swagger.yaml
@@ -3,8 +3,11 @@ info:
   title: Quiz API
   description: API для управления викторинами, пользователями и их ответами.
   version: 1.0.0
+servers:
+  - url: http://localhost:8080/api
+    description: Local development server
 paths:
-  /login:
+  /auth/login:
     post:
       summary: User login
       description: Аутентификация пользователя.
@@ -30,7 +33,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /logout:
+  /auth/logout:
     post:
       summary: User logout
       description: Завершение сессии пользователя.
@@ -48,7 +51,7 @@ paths:
                     type: string
                     example: success
 
-  /register:
+  /auth/register:
     post:
       summary: User registration
       description: Регистрация нового пользователя.
@@ -78,7 +81,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /patient/info:
+  /user/info/patient:
     post:
       summary: Get patient info
       description: Получает информацию о пациенте по его идентификатору.
@@ -110,8 +113,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /quiz/start:
-    get:
+  /questions/start:
+    post:
       summary: Start a new quiz
       description: Инициализирует новую сессию викторины и возвращает первый вопрос.
       tags:
@@ -130,7 +133,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /quiz/question:
+  /questions/get:
     post:
       summary: Get next question
       description: Возвращает следующий вопрос викторины.
@@ -199,7 +202,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /user/response:
+  /user/response/save:
     post:
       summary: Save user's response
       description: Сохраняет ответ пользователя на вопрос викторины.
@@ -265,22 +268,33 @@ components:
     RegisterIn:
       type: object
       properties:
+        username:
+          type: string
+          example: "mihanynes"
         first_name:
           type: string
+          example: "misha"
         middle_name:
           type: string
+          example: "andreevich"
         last_name:
           type: string
+          example: "petrov"
         email:
           type: string
+          example: "mihanynes@aaaa.ru"
         snils:
           type: string
+          example: "7777777777"
         password:
           type: string
+          example: "11111111"
         password_confirm:
           type: string
+          example: "11111111"
         is_admin:
           type: boolean
+          example: "false"
       required:
         - first_name
         - last_name
@@ -314,18 +328,10 @@ components:
     QuestionIn:
       type: object
       properties:
-        correlation_id:
-          type: string
         question_text:
           type: string
-        points:
-          type: integer
-        answer:
-          type: string
       required:
-        - correlation_id
         - question_text
-        - answer
 
     QuestionOut:
       type: object
